[package]
name = "rust-rt"
version = "0.1.0"
authors = ["Melvie <3878772+Melvie@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
indicatif = {version="0.15.0", features = ["rayon"]}
rayon = "1.5.0"